[gd_scene load_steps=5 format=3 uid="uid://b00ophucmbd5l"]

[ext_resource type="Script" uid="uid://cxjnubtica00e" path="res://user_interface/main_menu.gd" id="1_1aipp"]
[ext_resource type="Script" uid="uid://dvew0y2ls55ta" path="res://levels/view_switcher.gd" id="2_xqlja"]
[ext_resource type="PackedScene" uid="uid://djbky7jfs26om" path="res://config_screen.tscn" id="3_ejyv4"]
[ext_resource type="AudioStream" uid="uid://crwhnljt1t44k" path="res://levels/size_boarder.wav" id="4_l8n0t"]

[node name="MainMenu" type="Control" node_paths=PackedStringArray("start_button", "config_button", "quit_button", "view_switcher")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1aipp")
start_button = NodePath("ViewSwitcher/MainScreen/VBoxContainer/StartButton")
config_button = NodePath("ViewSwitcher/MainScreen/VBoxContainer/ConfigButton")
quit_button = NodePath("ViewSwitcher/MainScreen/VBoxContainer/QuitButton")
view_switcher = NodePath("ViewSwitcher")

[node name="ViewSwitcher" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_xqlja")
metadata/_custom_type_script = "uid://dvew0y2ls55ta"

[node name="MainScreen" type="Control" parent="ViewSwitcher"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ViewSwitcher/MainScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.0
offset_top = -64.0
offset_right = 85.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameLabel" type="Label" parent="ViewSwitcher/MainScreen/VBoxContainer"]
layout_mode = 2
text = "Big Hand"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="ViewSwitcher/MainScreen/VBoxContainer"]
layout_mode = 2
text = "Play the game i think"

[node name="ConfigButton" type="Button" parent="ViewSwitcher/MainScreen/VBoxContainer"]
layout_mode = 2
text = "fancy .ini editor"

[node name="QuitButton" type="Button" parent="ViewSwitcher/MainScreen/VBoxContainer"]
layout_mode = 2
text = "GO RUN LEAVE"

[node name="ConfigScreen" parent="ViewSwitcher" instance=ExtResource("3_ejyv4")]
layout_mode = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_l8n0t")
autoplay = true
